--- a/PicaPolloTCG/src/main/resources/application.properties
+++ b/PicaPolloTCG/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=PicaPolloTCG
+
+spring.data.mongodb.uri=mongodb://dam2:system@localhost:27017/PicaPollo?authSource=admin
+
+server.port=8080
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.enable-native-support=true
+springdoc.enable-webflux=true
+
+logging.level.org.springdoc=DEBUG
