--- a/PicaPolloTCG/src/main/resources/application.properties
+++ b/PicaPolloTCG/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=PicaPolloTCG
 
-spring.data.mongodb.uri=mongodb://dam2:system@localhost:27017/PicaPollo?authSource=admin
+spring.data.mongodb.uri=mongodb://dam2:system@localhost:27017/PicaPollo?authSource=PicaPollo
 
 server.port=8080
 
